--- a/src/components/Body/Products/ProductList/ProductList.module.css
+++ b/src/components/Body/Products/ProductList/ProductList.module.css
@@ -22,12 +22,56 @@
 }
 
 .name {
-   margin: 0 0 20px 0;
    text-align: center;
+   font-size: 24px;
 }
 
-.infoName {
-   margin: 0 20px 0 0;
+.blockName {
+   font-size: 20px;
+   margin: 10px 0 10px 30px;
 }
 
-.infoValue {}
+.infoLine {
+   display: grid;
+   grid-template-columns: 1fr 2fr;
+   grid-template-rows: auto;
+   margin: 15px 0;
+   padding: 5px 0;
+   position: relative;
+}
+
+/* .infoLine :after {
+   content: '';
+   position: absolute;
+   bottom: 0px;
+   left: 0;
+   height: 2px;
+   width: 30%;
+   background-color: #111;
+} */
+
+.lineName {
+   display: flex;
+   align-items: flex-start;
+   flex-direction: column;
+   /* align-items: center; */
+   padding: 0px 5px;
+   white-space: nowrap;
+   /* border-bottom: 1px dotted #111; */
+   /* overflow-wrap: initial */
+}
+
+.lineName::after {
+   content: '';
+   height: 1px;
+   width: 100%;
+   /* background-color: #111; */
+   border-bottom: 1px dotted #111;
+}
+
+.lineValue {
+   display: flex;
+   align-items: center;
+   /* max-width: 500px;
+   word-wrap: break-word; */
+}
