add cart, add product to cart, card page with renden products, calc total price

--- a/src/components/Body/Products/Product/ProductCard/ProductCard.module.scss
+++ b/src/components/Body/Products/Product/ProductCard/ProductCard.module.scss
@@ -66,6 +66,11 @@
          order: 3;
          color: blue;
       }
+
+      .priceLine {
+         order: 4;
+         color: yellowgreen;
+      }
    }
 }
 
